--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div class="header__container container">
 		<div class="header-body">
 			<div class="header-logo">
-            <a href="#"><img src="../img/logo.svg" alt="Логотип"></a> 
+            <a href="#"><img src="img/logo.svg" alt="Логотип"></a> 
          </div>
        
          <div class="header-menu menu">
@@ -42,7 +42,7 @@
                   <a href="#" class="header-menu__subscribe">Регистрация</a>
                </div>
                <div class="header-menu__button">
-                  <div class="strelka"><img src="../img/icons/strelka-btn1.svg" alt="#"></div>
+                  <div class="strelka"><img src="img/icons/strelka-btn1.svg" alt="#"></div>
                   <div class="btn"><a class="header-menu__btn" href="#">Войти</a></div>
                </div>
             </div>
@@ -97,7 +97,7 @@
          </div>
       </div>
       <div class="school-img">
-         <img src="../img/code.png" alt="Картинка">
+         <img src="img/code.png" alt="Картинка">
       </div>
    </div>
 </div>
