--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div class="technologies-body">
          <div class="technologies-content">
             <div class="technologies-image">
-               <img src="/img/technologi.png" alt="Картинка">
+               <img src="img/technologi.png" alt="Картинка">
             </div>
             <div class="technologies-content__body">
                <div class="technologies-items">
